--- a/Header.css
+++ b/Header.css
@@ -46,7 +46,7 @@ body, html {
     width: 10px 50px;
   } 
   .pala{
-    height: 75px;
+    height: 75%;
     background: linear-gradient(45deg,#B8CFEF,#B99A82);
     display: flex;
     align-items: center ;
@@ -61,6 +61,7 @@ body, html {
     gap: 10px;
     background-color: ;
     margin-left: 25px;
+    align-items: center;
   }
   .pal{
     height: 50px;
@@ -77,12 +78,14 @@ body, html {
     gap: 10px;
     background-color: ;
     align-items: center;
+    font-size: 75%;
   }
   .tengah{
     flex: 1;
     display: flex;
     align-content: center;
     justify-content: flex-end;
+    width: 75%;
   }
   .smk{
     flex: auto;
