--- a/Login.css
+++ b/Login.css
@@ -23,6 +23,8 @@ input[type=text], input[type=password],input[type=email]{
 }
 .aaaa{
     justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 .checkbox-container {
@@ -52,7 +54,10 @@ button:hover{
     height: 100%; /* Full height */
     padding-top: 60px;
   }
-
+.bggg{
+    width: 100%;
+    height: 100%S;
+}
   /* Modal Content/Box */
 .modal-content {
    background-color: #fefefe;
@@ -63,6 +68,7 @@ button:hover{
    border-radius: 50px;
    background-color: rgba(255, 255, 255, 0.3); /* Semi-transparent background */
    backdrop-filter: blur(8px); /* Apply blur */
+   x
 }
 
 .hdsite{
@@ -105,13 +111,16 @@ button:hover{
 
 .profile{
     margin: 0 auto;
-    height: 80px;
-    margin-bottom: 50px;
-    margin-top: 25px;
+    height: %;
+    margin-bottom: 5%;
+}
+.profile img{
+    margin-bottom:1%;
+    width: 100%;
 }
 .profile-text{
     margin: 0 auto;
-    height: 80px;
+    height: 15%;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -134,16 +143,19 @@ button:hover{
     color: white;
     border: none;
     width: 80%;
-    height: 40px;
+    height: 100%;
     margin: 8px 0;
     cursor: pointer;
     margin-left: 10%;
     margin-top: 10%;
+    padding: 5%;
 }
 
 .inputb{
     justify-content: center;
     text-align: center;
+    width: 100%;
+    margin-bottom: 5%;
 }
 #Gpic, #Fpic {
     width: 25px; /* Smaller size to fit better inside button */
