--- a/Login.css
+++ b/Login.css
@@ -186,6 +186,7 @@ button:hover{
         width: 100%;
         height: 100%;
         background-color: antiquewhite;
+        overflow: hidden;
     }
 .google{
 }
