--- a/Header.css
+++ b/Header.css
@@ -46,7 +46,7 @@ body, html {
     width: 10px 50px;
   } 
   .pala{
-    height: 75%;
+    height: 75px;
     background: linear-gradient(45deg,#B8CFEF,#B99A82);
     display: flex;
     align-items: center ;
@@ -61,7 +61,6 @@ body, html {
     gap: 10px;
     background-color: ;
     margin-left: 25px;
-    align-items: center;
   }
   .pal{
     height: 50px;
@@ -78,14 +77,12 @@ body, html {
     gap: 10px;
     background-color: ;
     align-items: center;
-    font-size: 75%;
   }
   .tengah{
     flex: 1;
     display: flex;
     align-content: center;
     justify-content: flex-end;
-    width: 75%;
   }
   .smk{
     flex: auto;
