--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 .badan{
-    background:url(Images/Membangun-Rumah-3877743469-1522023837522.webp) ;
+    background:url(Images/WhatsApp\ Image\ 2024-11-11\ at\ 19.07.30_122ad19a.jpg) ;
     background-size: cover;
     background-size: auto;
     background-repeat: no-repeat;
